# wacc

./: Cargo.toml  flake.nix
.config/: hakari.toml
crates/derive-token/: Cargo.toml
crates/derive-token/src/: lib.rs
crates/driver/: Cargo.toml
crates/driver/src/: main.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: c_token.rs  lib.rs
crates/lexer/src/c_token/: c_keyword.rs  c_symbol.rs
crates/tokengen/: Cargo.toml
crates/tokengen/src/: lib.rs  span.rs  token.rs
notes/: .gitignore  book.toml
notes/src/chapter_1/: chapter_1.md  return_2.s
src/: driver.rs  main.rs
