[package]
name = "wacc-driver"
description = "compiler driver for 'writing a c compiler'"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "wacc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }

[dev-dependencies]
expect-test = "1.5.1"
