[package]
name = "wacc-lexer"
description = "lexer for 'writing a c compiler'"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
once_cell = "1.20.2"
regex = "1.11.1"
thiserror = "2.0.9"
tokengen = { path = "../tokengen" }

[dev-dependencies]
expect-test.workspace = true
